# ggp

./: Makefile  README.md  ggp.cabal  hunter.kif
GGP/: Player.hs  Protocol.hs  Server.hs  Utils.hs
Language/: GDL.hs
Language/GDL/: Analysis.hs  Parser.hs  Print.hs  Query.hs  Quote.hs  Syntax.hs  Unify.hs
players/: AlphaBeta.hs  Deliberation.hs  DepthLimitedMinimax.hs  GoalAlphaBeta.hs  Legal.hs  Minimax.hs  MobilityAlphaBeta.hs  MobilityMinimax.hs  MonteCarlo.hs  MonteCarloTreeSearch.hs  Random.hs  alpha-beta-player.hs  deliberation-player.hs  legal-player.hs  manual-player.hs  minimax-player.hs  player.hs  random-player.hs
tests/: profiling-1.hs
tools/: download-games.hs
