name:                ggp
version:             0.1.0.0
synopsis:            Generalised game playing
-- description:
license:             BSD3
license-file:        LICENSE
author:              Ian Ross
maintainer:          ian@skybluetrades.net
category:            Game
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:     GGP.Player
                       GGP.Protocol
                       GGP.Utils
                       Language.GDL
                       Language.GDL.Parser
                       Language.GDL.Print
                       Language.GDL.Query
                       Language.GDL.Quote
                       Language.GDL.Syntax
                       Language.GDL.Unify
  -- other-modules:
  build-depends:       base                     >= 4.3        && < 5,
                       antiquoter               >= 0.1.1.0    && < 0.2,
                       bytestring               >= 0.10.0.2   && < 0.11,
                       case-insensitive         >= 1.1        && < 1.2,
                       cmdargs                  >= 0.10.5     && < 0.11,
                       containers               >= 0.5.0.0    && < 0.6,
                       data-default             >= 0.5.3      && < 0.6,
                       http-types               >= 0.8.1      && < 0.9,
                       MonadRandom              >= 0.1.12     && < 0.2,
                       parsec                   >= 3.1.3      && < 3.2,
                       pretty                   >= 1.1.1.0    && < 1.2,
                       random                   >= 1.0.1.1    && < 1.1,
                       resourcet                >= 0.4.8      && < 0.5,
                       SafeSemaphore            >= 0.9.0      && < 0.10,
                       sexp                     >= 0.7        && < 0.8,
                       template-haskell         >= 2.8        && < 2.9,
                       time                     >= 1.4.0.1    && < 1.5,
                       transformers             >= 0.3        && < 0.4,
                       wai                      >= 1.4.0.2    && < 1.5,
                       wai-util                 >= 0.6        && < 0.7,
                       warp                     >= 1.3.9.2    && < 1.4
  ghc-options:        -Wall -fwarn-tabs -O2

executable manual-player
  build-depends:       ggp,
                       base                     >= 4.3        && < 5,
                       bytestring               >= 0.10.0.2   && < 0.11,
                       blaze-builder            >= 0.3.1.1    && < 0.4,
                       case-insensitive         >= 1.1        && < 1.2,
                       conduit                  >= 1.0.7.4    && < 1.1,
                       http-types               >= 0.8.1      && < 0.9,
                       sexp                     >= 0.7        && < 0.8,
                       transformers             >= 0.3        && < 0.4,
                       wai                      >= 1.4.0.2    && < 1.5,
                       wai-util                 >= 0.6        && < 0.7,
                       warp                     >= 1.3.9.2    && < 1.4
  hs-source-dirs:      players
  main-is:             manual-player.hs
  ghc-options:         -Wall -fwarn-tabs -O2

executable server
  build-depends:       ggp,
                       base                     >= 4.3        && < 5,
                       bytestring                  >= 0.10.0.2 && < 0.11,
                       cmdargs                  >= 0.10.5     && < 0.11,
                       containers               >= 0.5.0.0    && < 0.6,
                       data-default             >= 0.5.3      && < 0.6,
                       http-conduit             >= 1.9.5.1    && < 2,
                       MonadRandom              >= 0.1.12     && < 0.2,
                       transformers             >= 0.3        && < 0.4,
                       vector                   >= 0.10.9.1   && < 0.11
  main-is:             Server.hs
  hs-source-dirs:      GGP
  ghc-options:         -Wall -fwarn-tabs -O2

executable player
  build-depends:       ggp,
                       base                     >= 4.3        && < 5,
                       containers               >= 0.5.0.0    && < 0.6,
                       data-default             >= 0.5.3      && < 0.6,
                       transformers             >= 0.3        && < 0.4,
                       vector                   >= 0.10.9.1   && < 0.11
  hs-source-dirs:      players
  main-is:             player.hs
  other-modules:       Legal
                       Random
                       Deliberation
                       Minimax
                       AlphaBeta
                       DepthLimitedMinimax
                       MobilityMinimax
                       MobilityAlphaBeta
                       GoalAlphaBeta
                       MonteCarlo
  ghc-options:         -Wall -fwarn-tabs -O2

test-suite profiling-1
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             profiling-1.hs
  ghc-options:         -O2
  build-depends:       ggp,
                       base                        >= 4.3      && < 5,
                       bytestring                  >= 0.10.0.2 && < 0.11,
                       criterion                   >= 0.8      && < 0.9,
                       deepseq                     >= 1.3.0.1  && < 1.4
